# pantomime

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
examples/login/: .gitignore  README.md
examples/login/config/: pantomime.example.yaml
examples/login/fixtures/: login_app.py
examples/login/tests/: login.yaml
runner/: README.md  drizzle.config.ts  package.json  pnpm-lock.yaml
runner/src/: app.css  app.html
runner/src/lib/: types.ts  ui.ts
runner/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
schemas/v1/: pantomime.schema.json  testcase.schema.json
src/pantomime/: __init__.py  cli.py  cli_init.py  cli_run.py  cli_runner.py  cli_sense.py
src/pantomime/driver/: __init__.py  base.py  region.py  region_select.py
src/pantomime/orchestrator/: __init__.py  cancel.py  context.py  history.py  loop.py  results.py  runner.py
src/pantomime/parser/: __init__.py  loader.py  resolve.py
src/pantomime/perception/: __init__.py  grounder.py  redact.py  screen_state.py  sense.py  settle.py
src/pantomime/reasoning/: __init__.py  client.py  judge.py  openai_backend.py  planner.py  prompts.py  providers.py  tools.py
src/pantomime/reporting/: __init__.py  explain.py  junit.py  recorder.py  trace.py
tests/: test_actuate.py  test_cancel.py  test_config.py  test_driver.py  test_grounder.py  test_init.py  test_reasoning.py  test_resolve.py  test_schema.py  test_screen_state.py  test_settle.py  test_verify_and_report.py
(+35 files in other folders)
